@@ -4,8 +4,6 @@ import org.junit.Test;
 
 import java.util.Arrays;
 import java.util.List;
-
-import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
 
@@ -36,7 +34,7 @@ public class DepartmentsTest  {
 
     @Test
     public void whenAscSorted() {
-        List<String> input = List.of("k2/sk1", "k2", "k1/sk1",
+        List<String> input = Arrays.asList("k2/sk1", "k2", "k1/sk1",
                                            "k1", "k1/sk1/ssk1", "k2/sk1/ssk2");
         List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1",
                                             "k2", "k2/sk1", "k2/sk1/ssk2");
@@ -46,7 +44,7 @@ public class DepartmentsTest  {
 
     @Test
     public void whenDescSorted() {
-        List<String> input = List.of("k2/sk1", "k2", "k1/sk1",
+        List<String> input = Arrays.asList("k2/sk1", "k2", "k1/sk1",
                                            "k1", "k1/sk1/ssk1", "k2/sk1/ssk2");
         List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk2", "k1",
                                              "k1/sk1", "k1/sk1/ssk1");
