@@ -1,6 +1,5 @@
 package ru.job4j.collection;
 
-import junit.framework.TestCase;
 import org.junit.Test;
 
 import java.util.Arrays;
@@ -13,7 +12,7 @@ import static org.junit.Assert.assertThat;
 public class JobDescByNameTest  {
     @Test
     public void whenComparatorByNameIncrement() {
-        List<Job> jobs = List.of(
+        List<Job> jobs = Arrays.asList(
                 new Job("Impl task", 0),
                 new Job("Fix bug", 1),
                 new Job("X task", 3)
