@@ -11,7 +11,7 @@ import static org.junit.Assert.assertThat;
 public class JobIncByNameTest {
     @Test
     public void whenComparatorByNameIncrement() {
-        List<Job> jobs = List.of(
+        List<Job> jobs = Arrays.asList(
                 new Job("Impl task", 0),
                 new Job("Fix bug", 1),
                 new Job("X task", 3)
